--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#2fa4a9">
     <meta name="color-scheme" content="light dark">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="icon" type="image/png" href="{% static 'media/logo2.png' %}">
